@@ -97,6 +97,24 @@ class TestDescrTestCase(unittest.TestCase):
         except AttributeError, e:
             self.assertEquals("Custom message", str(e))
 
+    def test_set_without_get(self):
+        class Descr(object):
+
+            def __init__(self, name):
+                self.name = name
+
+            def __set__(self, obj, value):
+                obj.__dict__[self.name] = value
+        descr = Descr("a")
+
+        class X(object):
+            a = descr
+
+        x = X()
+        self.assertTrue(x.a is descr)
+        x.a = 42
+        self.assertEqual(x.a, 42)
+
 
 class SubclassDescrTestCase(unittest.TestCase):
 
